<resources>
    <string name="app_name">RxExam</string>
    <string name="btn1">Rx#1</string>
    <string name="btn2">Rx#2</string>
    <string name="btn3">Rx#3</string>
    <string name="btn4">Rx#4</string>
    <string name="btn5">Rx#5</string>
    <string name="btn6">Rx#6</string>
    <string name="btn7">Rx#7</string>
    <string name="btn8">Rx#8</string>
    <string name="btn9">Rx#9</string>
    <string name="btn10">Rx#10</string>
    <string name="btn11">Rx#11</string>
    <string name="btn12">Rx#12</string>
    <string name="btn13">Rx#13</string>
    <string name="btn14">Rx#14</string>
    <string name="btn15">Rx#15</string>
    <string name="btn16">Rx#16</string>
    <string name="btn17">Rx#17</string>
    <string name="btn18">Rx#18</string>
    <string name="btn19">Rx#19</string>
    <string name="btn20">Rx#20</string>
    <string name="btn21">Rx#21</string>
    <string name="btn22">Rx#22</string>
    <string name="btn23">Rx#23</string>
    <string name="btn24">Rx#24</string>
    <string name="btn25">Rx#25</string>
    <string name="btn26">Rx#26</string>
    <string name="btn27">Rx#27</string>
    <string name="btn28">Rx#28</string>
    <string name="btn29">Rx#29</string>
    <string name="btn30">Rx#30</string>
    <string name="btn31">Rx#31</string>
    <string name="btn32">Rx#32</string>
    <string name="btn33">Rx#33</string>
    <string name="btn34">Rx#34</string>
    <string name="btn35">Rx#35</string>
    <string name="btn36">Rx#36</string>
    <string name="btn37">Rx#37</string>
    <string name="btn38">Rx#38</string>
    <string name="btn39">Rx#39</string>
    <string name="btn40">Rx#40</string>
    <string name="btn41">Rx#41</string>
    <string name="btn42">Rx#42</string>
    <string name="btn43">Rx#43</string>
    <string name="btn44">Rx#44</string>
    <string name="btn45">Rx#45</string>
    <string name="btn46">Rx#46</string>
    <string name="btn47">Rx#47</string>
    <string name="btn48">Rx#48</string>
    <string name="btn49">Rx#49</string>
    <string name="btn50">Rx#50</string>
    <string name="btn51">Rx#51</string>
    <string name="btn52">Rx#52</string>
    <string name="btn53">Rx#53</string>
    <string name="btn54">Rx#54</string>
    <string name="btn55">Rx#55</string>
    <string name="btn56">Rx#56</string>
    <string name="btn57">Rx#57</string>
    <string name="btn58">Rx#58</string>
    <string name="btn59">Rx#59</string>
    <string name="btn60">Rx#60</string>
</resources>

